--- a/styles.css
+++ b/styles.css
@@ -24,45 +24,67 @@ body {
 }
 
 /* MAIN SECTION STYLES */
+
 main {
-    width: 80vw;
-    height: 100vh;
+    /* border: 1px solid blue; */
+    width: 100vw;
+    height: 90vh;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
     align-items: center;
     justify-items: center;
 }
-    
-    
 
+
+    
+    
+@media screen and (min-width: 360px){
 .main-image {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    /* border: 1px solid blue; */
     background-image: url('./assets/portfolio-header-img.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 60vw;
-    height: 80vh;
+    background-size: contain;
+    background-position: 0 4rem;
+    width: 90vw;
+    height: 50vh;
     margin: 0 auto;
-    box-shadow: var(--mainBoxShadow);
     border-radius: var(--mainBorderRadius);
+    box-shadow:1px 1px 10px rgba(75, 75, 75, 0.8);
 }
+}
+    
 
+    
+   
+@media screen and (min-width: 360px) {
 .nav {
     background: var(--mainGreyColor);
     display: flex;
-    width: 60vw;
-    height: 15vh;
+    width: 90vw;
+    height: 10vh;
     align-items: center;
     justify-content: space-around;
     border-radius: var(--mainBorderRadius);
+    translate: 0 -2rem;
 }  
+}
 
+
+@media screen and (min-width: 360px){
 nav i{
-    font-size: 5rem;
+    font-size: 1.5rem;
     color: var(--mainTextColor);
     box-shadow: var(--mainBoxShadow);
 }
+}
+
+    
+    
+
 
     
     
