--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* GLOBAL RESET */
 * {
     margin: 0;
     padding: 0;
@@ -15,72 +16,61 @@
     --mainBoxShadow: 3px 3px 5px rgba(0,0,0,0.8);
     --mainBorderRadius: 1rem;
 }
-
+/* GLOBAL BODY STYLES */
 body {
     background: var(--mainBodyColor);
     color: var(--mainTextColor);
     letter-spacing: var(--mainLetterSpacing);
     line-height: var(--mainLineHeight);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* MAIN SECTION STYLES */
 
 main {
     /* border: 1px solid blue; */
-    width: 100vw;
-    height: 90vh;
+    width: 80vw;
+    height: 100vh;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 1fr;
-    align-items: center;
     justify-items: center;
+    align-items: center;
 }
 
-
-    
-    
-@media screen and (min-width: 360px){
 .main-image {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    /* border: 1px solid blue; */
-    background-image: url('./assets/portfolio-header-img.jpg');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 4rem;
-    width: 90vw;
-    height: 50vh;
-    margin: 0 auto;
-    border-radius: var(--mainBorderRadius);
-    box-shadow:1px 1px 10px rgba(75, 75, 75, 0.8);
-}
-}
-    
+   /* border: 1px solid blue; */
+  box-shadow: 2px 2px 20px rgba(78, 78, 78, 0.8);
 
-    
-   
-@media screen and (min-width: 360px) {
+}
+img {
+    display: block;
+    width: 60vw;
+    box-shadow: var(--mainBoxShadow);
+    border-radius: 0.2rem;
+    margin: 0 0 0.5rem 0;
+    outline-style: solid;
+    outline-color: #c0c0c0;
+    outline-width: thin;
+}
+
 .nav {
-    background: var(--mainGreyColor);
+    outline-color: var(--mainTextColor);
+    outline-style: double ;
     display: flex;
-    width: 90vw;
-    height: 10vh;
+    width: 60vw;
+    height: 5rem;
     align-items: center;
     justify-content: space-around;
-    border-radius: var(--mainBorderRadius);
-    translate: 0 -2rem;
-}  
-}
-
-
-@media screen and (min-width: 360px){
-nav i{
-    font-size: 1.5rem;
-    color: var(--mainTextColor);
+    font-size: 4rem;
+    background: var(--mainGreyColor);
     box-shadow: var(--mainBoxShadow);
+    border-radius: 0.2rem;
 }
-}
+
+
+    
+
 
     
     
