--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-/* GLOBAL VARIABLES */
+/* ================== GLOBAL VARIABLES ==========================================*/
 :root {
     --mainBodyColor: #191919;
     --mainTextColor: #c0c0c0;
@@ -16,7 +16,7 @@
     --mainBoxShadow: 3px 3px 5px rgba(0,0,0,0.8);
     --mainBorderRadius: 1rem;
 }
-/* GLOBAL BODY STYLES */
+/*  ==================== GLOBAL BODY STYLES  =====================================*/
 body {
     background: var(--mainBodyColor);
     color: var(--mainTextColor);
@@ -25,7 +25,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-/* MAIN SECTION STYLES */
+/* =========== MAIN SECTION STYLES ============================================*/
 
 main {
     /* border: 1px solid blue; */
@@ -37,6 +37,8 @@ main {
     justify-items: center;
     align-items: center;
 }
+
+/* ======= HEADER IMAGE STYLES =====================================*/
 
 .main-image {
    /* border: 1px solid blue; */
@@ -54,6 +56,13 @@ img {
     outline-width: thin;
 }
 
+img:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.03);
+}
+
+/* ========== NAV BAR STYLES =============================================== */
+
 .nav {
     outline-color: var(--mainTextColor);
     outline-style: double ;
@@ -67,6 +76,13 @@ img {
     box-shadow: var(--mainBoxShadow);
     border-radius: 0.2rem;
 }
+
+.nav:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.03);
+}
+
+/* ========== ICON STYLES ========================================================= */
 
 i {
     box-shadow: var(--mainBoxShadow);
