--- a/certificates.css
+++ b/certificates.css
@@ -24,3 +24,241 @@ body {
     line-height: var(--mainLineHeight);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+/* =========== MAIN SECTION STYLES ============================================*/
+
+main {
+    /* border: 1px solid blue; */
+    width: 80vw;
+    height: 100vh;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    
+}
+
+/* ======= HEADER IMAGE STYLES =====================================*/
+
+.main-image {
+   /* border: 1px solid blue; */
+  box-shadow: 2px 2px 20px rgba(78, 78, 78, 0.8);
+
+}
+img {
+    display: block;
+    width: 60vw;
+    box-shadow: var(--mainBoxShadow);
+    border-radius: 0.2rem;
+    margin: 0 0 1rem 0;
+    outline-style: solid;
+    outline-color: #c0c0c0;
+    outline-width: thin;
+}
+
+img:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.03);
+}
+
+/* ====== MOBILE DESIGN IMAGE==================================== */
+
+@media screen and (max-width: 767px) {
+    img {
+        display: block;
+        width: 90vw;
+        /* height: 50vh; */
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+        margin: 0 0 1rem 0;
+        outline-style: solid;
+        outline-color: #c0c0c0;
+        outline-width: thin;
+    }
+}
+/* ========= TABLET DESIGN IMAGE ================================================== */
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    img {
+        display: block;
+        width: 90vw;
+        /* height: 50vh; */
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+        margin: 0 0 1rem 0;
+        outline-style: solid;
+        outline-color: #c0c0c0;
+        outline-width: thin;
+    }
+}
+
+/* ========= DESKTOP DESIGN IMAGE ================================================== */
+
+@media screen and (min-width: 1024px){
+    img {
+        display: block;
+        width: 70vw;
+        /* height: 50vh; */
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+        margin: 0 0 1rem 0;
+        outline-style: solid;
+        outline-color: #c0c0c0;
+        outline-width: thin;
+    }
+}
+
+/* ====== MOBILE DESIGN MAIN ==================================== */
+@media screen and (max-width: 767px) {
+    main {
+        /* border: 1px solid blue; */
+        width: 90vw;
+        height: 100vh;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+}
+/* ========= TABLET DESIGN MAIN ================================================== */
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    main {
+        /* border: 1px solid blue; */
+        width: 90vw;
+        height: 100vh;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+}
+/* ========= DESKTOP DESIGN MAIN ================================================== */
+
+@media screen and (min-width: 1024px) {
+    main {
+        /* border: 1px solid blue; */
+        width: 70vw;
+        height: 100vh;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+        
+    }
+}
+
+
+
+
+/* ========== NAV BAR STYLES =============================================== */
+
+.nav {
+    outline-color: var(--mainTextColor);
+    outline-style: double ;
+    display: flex;
+    width: 60vw;
+    height: 5rem;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 4rem;
+    background: var(--mainGreyColor);
+    box-shadow: var(--mainBoxShadow);
+    border-radius: 0.2rem;
+    margin-bottom: 1rem;
+}
+/* ====== MOBILE DESIGN NAV ==================================== */
+
+@media screen and (max-width: 767px){
+    .nav {
+        outline-color: var(--mainTextColor);
+        outline-style: double ;
+        display: flex;
+        width: 90vw;
+        height: 5rem;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1rem;
+        background: var(--mainGreyColor);
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+    }
+}
+
+/* ========= TABLET DESIGN NAV ================================================== */
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    .nav {
+        outline-color: var(--mainTextColor);
+        outline-style: double ;
+        display: flex;
+        width: 90vw;
+        height: 5rem;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 1.5rem;
+        background: var(--mainGreyColor);
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+    }
+}
+/* ========= DESKTOP DESIGN NAV ================================================== */
+
+
+@media screen and (min-width: 1024px){
+    .nav {
+        outline-color: var(--mainTextColor);
+        outline-style: double ;
+        display: flex;
+        width: 70vw;
+        height: 5rem;
+        align-items: center;
+        justify-content: space-around;
+        font-size: 3rem;
+        background: var(--mainGreyColor);
+        box-shadow: var(--mainBoxShadow);
+        border-radius: 0.2rem;
+    }
+}
+
+
+
+
+.nav:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.03);
+}
+
+/* ========== ICON STYLES ========================================================= */
+
+i {
+    box-shadow: var(--mainBoxShadow);
+    color: var(--mainTextColor);
+}
+
+.fa-brands {
+    text-shadow: var(--mainBoxShadow);
+}
+
+.fa-brands:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.05);
+    color: #f5f5f5;
+}
+
+.fa-solid {
+    text-shadow: var(--mainBoxShadow);
+}
+
+.fa-solid:hover{
+    transition: var(--mainTransition);
+    transform: scale(1.05);
+    color: #f5f5f5;
+};
+
+
+
+
