--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ main {
     height: 100vh;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
 }
